--- a/impedance_control/config/controllers.yaml
+++ b/impedance_control/config/controllers.yaml
@@ -13,6 +13,9 @@ controller_manager:
 
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
+
+    effort_controller:
+      type: effort_controllers/JointGroupEffortController
     
 velocity_controller:
   ros__parameters:
@@ -39,3 +42,17 @@ joint_trajectory_controller:
     state_interfaces:
       - position
       - velocity
+
+effort_controller:
+  ros__parameters:
+    joints:
+      - joint1
+      - joint2
+      - joint3
+
+    command_interfaces:
+      - effort
+    state_interfaces:
+      - position
+      - velocity
+      - effort
